# A4-DroughtForecasting-Modeling

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: cv.yaml  data.yaml  features.yaml  metrics.yaml
docs/: LSTM_Pipeline_Audit.md  SPEI3_Forecasting_Scheme_v3.md  SPEI3_Forecasting_Scheme_v4.md  forecasting_scheme_v2.md
droughtmodel/: __init__.py  cv.py  data.py  evaluation.py  features.py  lstm_pipeline.py  pipeline.py  selection.py  sequence.py  tuning.py  utils.py
inputs/: SPEI3.nc  climate_indices.nc  cru-inputs.nc  cru-pre-tmp-tmn-tmx-pet.nc  era5-inputs.nc  era5-ssrd-si2-vpd.nc
notebooks/: 01_eda.ipynb  02_feature_engineering_diagnostics.ipynb  03_cv_visualization.ipynb  04_evaluation_demo.ipynb  05_results_baselines.ipynb  06_results_tabular_ml.ipynb  06_results_tabular_ml_pruned-winter.ipynb  06_results_tabular_ml_winter.ipynb  07_spatial_skill_maps.ipynb  07_spatial_skill_maps_pruned-winter.ipynb  07_spatial_skill_maps_winter.ipynb  08_feature_importance.ipynb  08_feature_importance_pruned-winter.ipynb  08_feature_importance_winter.ipynb  09_paper_figures.ipynb  09_paper_figures_pruned-winter.ipynb  09_paper_figures_winter.ipynb  12_lstm_vs_default.ipynb
scripts/: 03_run_experiment.py  04_backfill_per_fold_metrics.py  05_compute_posthoc_importance.py  06_compute_refit_train_rmse.py  07_run_lstm.py  08_compute_lstm_train_rmse.py
shapefiles/: MAR_adm0.sbn  MAR_adm0.sbx  MAR_adm0.shp  MAR_adm0.shx
tests/: test_baselines.py  test_bootstrap.py  test_linear.py  test_lstm.py  test_metrics.py  test_pipeline.py  test_selection.py  (+2 more)
(+84 files in other folders)
