[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droughtmodel"
version = "0.1.0"
description = "SPEI3 drought forecasting over Morocco — baselines, tabular ML, and DL"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anas Soubaha" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["droughtmodel*"]
exclude = ["tests*", "notebooks*", "scripts*", "configs*", "results*", "data*", "docs*", "inputs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
